--- a/test3/index.html
+++ b/test3/index.html
@@ -12,6 +12,9 @@
     <button onclick="join()">Join</button>
     <button onclick="leave()">Leave</button>
     <p><b id="last-msg"></b></p>
+
+    <div id="messages"></div>
+
     <script>
       const ws = new WebSocket('ws://localhost:8005'); // 웹소켓 준비
 
@@ -23,14 +26,13 @@
         console.log(event.data);
         document.getElementById('last-msg').innerText = event.data;
         let messageElem = document.createElement('div'); // 폼에 메시지 붙여주기
-        // messageElem.textContent = event.data;
         messageElem.innerHTML = event.data;
-        // document.getElementById('messages').prepend(messageElem);
         document.querySelector('#messages').prepend(messageElem);
       };
 
       function create() {
-        ws.send('{ "type": "create" }'); // 방을 제작하는 코드
+        const obj = { type: 'create' }  // 새로운 방 생성
+        ws.send(JSON.stringify(obj));  
       }
 
       function join() {
@@ -45,7 +47,5 @@
         ws.send(JSON.stringify(obj));
       }
     </script>
-
-    <div id="messages"></div>
   </body>
 </html>
